# TrackerOnlyEmu

./: .gitignore  .lvimrc  .pylintrc  MANIFEST.in  Makefile  README.md  flake.nix  setup.py
TrackerOnlyEmu/: __init__.py  exec.py  executor.py  loader.py  utils.py
TrackerOnlyEmu/emulation/: run2_rdx.py
TrackerOnlyEmu/triggers/: kinematics.h
TrackerOnlyEmu/triggers/hlt1/: run2-Hlt1GEC.h  run2-Hlt1TrackMVA.h  run2-Hlt1TwoTrackMVA.h
TrackerOnlyEmu/triggers/hlt1/tck_info/: hlt1_tcks_161718_data.txt  tckinfo2016_Hlt1TrackMVA_1138160f.txt  tckinfo2016_Hlt1TwoTrackMVA_1138160f.txt  tckinfo2016num2_Hlt1TrackMVA_11361609.txt  (+5 more)
TrackerOnlyEmu/triggers/l0/: bdt.pickle  bdt4-2016.pickle  bdt4.pickle  hcal_et_response.root  hcal_two_part_clusters.root  l0_tis_efficiency.root  run2-L0GlobalTIS.h  run2-L0Hadron.h  xgb4-2016.pickle  xgb4-2017.pickle  xgb4-2018.pickle
davinci/Phys/RelatedInfoTools/: CMakeLists.txt
davinci/Phys/RelatedInfoTools/src/: RelInfoHLT1Emulation.cpp  RelInfoHLT1Emulation.h
nix/: default.nix  overlay.nix
scripts/: l0hadron_trainload_bdt_xgb.py  l0hadron_trainload_xgb.py  lohadron_trainload_bdt.py  run2-rdx-hlt1.py  run2-rdx-l0_global_tis.py  run2-rdx-l0_hadron.py  run2-rdx-l0_hadron_tos.py  run2-rdx-l0_hadron_train_bdt.py  run2-rdx-l0_hadron_trainload_bdt.py  run2-rdx-l0_hadron_trainload_xgb.py  run2-rdx-trg_emu.py
studies/l0hadron_train_bdt/: l0hadron_train_bdt.py  train_l0hadron_bdt.py
studies/l0hadron_train_xgb/: train_l0hadron_xgb.py
triggers/efficiencies/: run2-tracking.h
triggers/hlt1/: run2-Hlt1GEC.h  run2-Hlt1TwoTrackMVA.h
(+3 files in other folders)
